--- a/TrunksCommander/TrunksCommander.csproj
+++ b/TrunksCommander/TrunksCommander.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeallitasKezelo.cs" />
+    <Compile Include="Beallitasok.cs" />
+    <Compile Include="BeallitasokForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BeallitasokForm.Designer.cs">
+      <DependentUpon>BeallitasokForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomFileManager.cs" />
     <Compile Include="IFileManager.cs" />
     <Compile Include="MainForm.cs">
@@ -62,6 +73,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BeallitasokForm.resx">
+      <DependentUpon>BeallitasokForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +91,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
